All object files pushed

--- a/src/makefile
+++ b/src/makefile
@@ -1,9 +1,9 @@
 # Makefile
 
 CXX = g++
-CXXFLAGS = -std=c++11 -Wall -Wextra -I../include
+CXXFLAGS = -std=c++17 -Wall -Wextra -I../include
 LDFLAGS = -L../lib -lsfml-graphics -lsfml-window -lsfml-system
-SRC = main.cpp Map.cpp MapScreen.cpp Building.cpp Tile.cpp TextureManager.cpp UIManager.cpp IsometricUtils.cpp GameState.cpp Tank.cpp TankSpawn.cpp Pathfinding.cpp
+SRC = main.cpp Map.cpp MapScreen.cpp Building.cpp Bullet.cpp BulletManager.cpp GameStateManager.cpp QuadTree.cpp Skeleton.cpp SkeletonSpawn.cpp Tower.cpp Trap.cpp Tile.cpp TextureManager.cpp UIManager.cpp IsometricUtils.cpp GameState.cpp Tank.cpp TankSpawn.cpp Pathfinding.cpp
 OBJ = $(SRC:.cpp=.o)
 EXEC = prog
 
